# mega-mad-scientist-contract

./: .gitignore  COSMOS_V053_TEST_HARDENING_PLAYBOOK.md  Cargo.toml  LAUNCH_CHECKLIST.md  LOCALNET_DEBUG_RUNBOOK.md  NOOB_AUDIT_GUIDE.txt  ODINSCAN_REMEDIATION_2026-03-05.md  PASHOV_COSMWASM_CHECKLIST_AUDIT.md  README.md  TEST_COVERAGE_REVIEW.md  ci_repeat_regression.sh  code-map.html  deny.toml  deploy.sh  localnet_e2e.sh  localnet_two_node_e2e.sh  mutation_guard.sh  rehearse.sh  security_stress.sh
.github/workflows/: ci.yml  odin-scan.yml  repeat-regression.yml
examples/: schema.rs
src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs  stateful_fuzz.rs  tests.rs
tests/: integration.rs
