[package]
name = "mega-mad-scientist"
version = "0.1.0"
edition = "2021"
authors = ["Cosmic Mad Scientists"]
description = "Auction and swap pool contract for Cosmic Mad Scientist NFTs on CosmWasm"
license = "MIT OR Apache-2.0"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
# Use library feature to compile without entry points — useful for testing
library = []

[dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cosmwasm-schema = "1.5"
cw-storage-plus = "1.2"
cw2 = "1.1"
cw721 = "0.18"
cw721-base = { version = "0.18", features = ["library"] }
schemars = "0.8"
serde = { version = "1.0", default-features = false, features = ["derive"] }
thiserror = "1.0"

[dev-dependencies]
cosmwasm-std = { version = "1.5", features = ["staking"] }
cw-multi-test = "0.20"
proptest = "1.6"

# Ensure arithmetic overflows panic in tests too (not just release)
[profile.dev]
overflow-checks = true

[profile.release]
opt-level = 3
debug = false
rpath = false
lto = true
debug-assertions = false
codegen-units = 1
panic = 'abort'
incremental = false
overflow-checks = true
